# kalqlator

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  NOTICE  README.md  clean-cmake-artifacts.sh  kalqlator.cppcheck  mise.toml
.github/workflows/: ci.yml
resources/: icons.qrc
scripts/: run-clang-tidy  run-clang-tidy-fix  run-cppcheck
src/: main.cpp
src/events/: CellChangedEvent.h  CellEvent.h  CellUpdateDoneEvent.h  CellUpdateErrorEvent.h  DocumentLoadedEvent.h  MacroEditorErrorEvent.h  MacroErrorEvent.h  ModelSheetSelectionChangedEvent.h  NewCellReferenceEvent.h  SearchEvent.h  SearchResultEvent.h  SelectSheetAndCellEvent.h  SelectedCellChangedEvent.h  SelectionChangedEvent.h  SheetSelectionChangedEvent.h  TableColumnResizedEvent.h  TableEnvironmentUpdateEvent.h  TablePropertyResizedEvent.h  TableRowResizedEvent.h  UISheetAddEvent.h  UISheetMoveDownEvent.h  UISheetMoveUpEvent.h  UISheetRenameEvent.h
src/file/: CellFormatJson.cpp  CellFormatJson.h  DocumentJsonSerializer.cpp  DocumentJsonSerializer.h
src/lisp/: ArgumentError.h  DefaultEnvironment.cpp  DefaultEnvironment.h  EvalError.h  Evaluator.cpp  Evaluator.h  LispObjectStringConverter.cpp  LispObjectStringConverter.h  NotImplementedError.h  NumericOperation.h  SyntaxError.h  TypeError.h  UnknownSymbolError.h  environment.cpp  environment.h  factories.h  gmp_tools.h  object.h  tools.h  types.h
src/lisp/native/: calculation.h  car.h  cdr.h  eq.h  greater.h  list.h  number_equality.h  progn.h  smaller.h
src/lisp/parser/: parser.cpp  parser.h  parser_error.h
src/lisp/tokenizer/: lisp_parser_error.h  lisp_syntax_checker.cpp  lisp_syntax_checker.h  lisp_tokenizer.cpp  lisp_tokenizer.h  lisp_tokens.h  syntax_checker.cpp  syntax_checker.h  tokenizer.cpp  tokenizer.h  tokens.h
src/messagebus/: event_dispatcher.h  event_sink.h
src/model/: Cell.h  CellDisplayFormatter.cpp  CellDisplayFormatter.h  CellError.h  CellErrorType.h  CellFormat.h  CircularReferenceError.h  Document.cpp  Document.h  LispObjectStringConverter.cpp  LispObjectStringConverter.h  MoveSheetDirection.h  QualifiedCellRef.h  Sheet.cpp  Sheet.h  SheetRegistry.h  TableContext.h  TableLispEnvironment.cpp  TableLispEnvironment.h  triggers.h
src/model/events/: CellUpdateErrorEvent.h  SelectedCellChangedEvent.h  TableEnvironmentUpdateEvent.h
src/model/functions/: Cell.h  TableCell.h
src/model/search/: SearchOptions.h  SearchResultItem.h
src/tools/: FlagScope.h  location.h  rectangle.h  tools.cpp  tools.h
src/ui/: CellChangeCommand.cpp  CellChangeCommand.h  CellFormatChangeCommand.cpp  CellFormatChangeCommand.h  CellFormatDialog.cpp  CellFormatDialog.h  ClipboardCellsMime.cpp  ClipboardCellsMime.h  FormulaBar.cpp  FormulaBar.h  FormulaEditorDialog.cpp  FormulaEditorDialog.h  KalqSidePanel.cpp  KalqSidePanel.h  KalqWorksheetPanel.cpp  KalqWorksheetPanel.h  KalqlatorTableCellItemDelegate.h  KalqlatorTableWidget.cpp  KalqlatorTableWidget.h  MacroEditorDialog.cpp  MacroEditorDialog.h  MainWindow.cpp  MainWindow.h  SearchDialog.cpp  SearchDialog.h  SearchResultItemMetaType.h  TableCellTypes.h  TableErrorDelegate.h  user_interface_tools.h
src/ui/events/: DocumentLoadedEvent.h  SearchEvent.h  SelectSheetAndCellEvent.h  SelectionChangedEvent.h  SheetListUpdateRequestEvent.h  SheetSelectionChangedEvent.h  UISheetRemoveEvent.h
src/viewmodel/: SpreadsheetModel.cpp  SpreadsheetModel.h
src/viewmodel/events/: CellChangedEvent.h
tests/: CMakeLists.txt  TestBase.h  test_cell_display_formatter.cpp  test_clipboard_cells_mime.cpp  test_document_integration.cpp  test_document_json_serializer.cpp  test_flagscope.cpp  test_lisp_comparison.cpp  test_lisp_equality.cpp  test_lisp_evaluator.cpp  test_lisp_if.cpp  test_lisp_lambda.cpp  test_lisp_object_string_converter.cpp  test_lisp_parser.cpp  test_lisp_progn.cpp  test_lisp_quote.cpp  test_lisp_setq.cpp  test_lisp_tokenizer.cpp  test_location.cpp  test_table_lisp_environment.cpp  test_tools.cpp  test_tools.h
